Fixed spacing between title and image

--- a/sass/_style.sass
+++ b/sass/_style.sass
@@ -267,6 +267,8 @@ a[href]:active i
         text-decoration: none
     h2
         text-align: center
+    + .project-image
+        padding-top: 0
 
 .avatar
     height: auto
